add no_log: true to hide secrets during build failures and add Rancher URL display task

--- a/roles/rancher/tasks/helm/build.yml
+++ b/roles/rancher/tasks/helm/build.yml
@@ -30,6 +30,7 @@
     --set bootstrapPassword={{ bootstrap_password }}
   tags:
     - rancher-install
+  no_log: true
 
 - name: Wait for Rancher deployment to be Available
   command: >
