add galaxy collections and restructure

--- a/roles/rancher/defaults/main.yml
+++ b/roles/rancher/defaults/main.yml
@@ -1,11 +1,20 @@
 ---
-k3s_url: https://get.k3s.io
-helm_url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-4
-rancher_latest_url: https://releases.rancher.com/server-charts/latest
-cert_manager_url: https://github.com/cert-manager/cert-manager/releases/download/v1.19.1/cert-manager.crds.yaml
-jetstack_url: https://charts.jetstack.io
+# Helm repos
+rancher_helm_repo_name: rancher-latest
+rancher_helm_repo_url: "https://releases.rancher.com/server-charts/latest"
 
-cattle_namespace: cattle-system
+cert_manager_helm_repo_name: jetstack
+cert_manager_helm_repo_url: "https://charts.jetstack.io"
 
-hostname: "{{ vault_hostname }}"
-bootstrap_password: "{{ vault_bootstrap_password }}"
+# Namespaces
+rancher_namespace: cattle-system
+cert_manager_namespace: cert-manager
+
+# Optional pinning (leave empty to get latest)
+rancher_chart_version: ""
+cert_manager_chart_version: ""
+
+# Rancher config
+rancher_hostname: "{{ vault_hostname }}"
+rancher_replicas: 1
+rancher_bootstrap_password: "{{ vault_rancher_bootstrap_password | default('admin') }}"
