--- a/roles/rancher/defaults/main.yml
+++ b/roles/rancher/defaults/main.yml
@@ -5,7 +5,8 @@ rancher_helm_repo_url: "https://releases.rancher.com/server-charts/latest"
 helm_url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-4
 
 cert_manager_helm_repo_name: jetstack
-cert_manager_helm_repo_url: "https://charts.jetstack.io"
+cert_manager_url: https://github.com/cert-manager/cert-manager/releases/download/v1.19.1/cert-manager.crds.yaml
+jetstack_helm_repo_url: "https://charts.jetstack.io"
 
 # Namespaces
 rancher_namespace: cattle-system
