--- a/roles/rancher/defaults/main.yml
+++ b/roles/rancher/defaults/main.yml
@@ -4,7 +4,7 @@ rancher_helm_repo_name: rancher-latest
 rancher_helm_repo_url: "https://releases.rancher.com/server-charts/latest"
 helm_url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-4
 
-cert_manager_helm_repo_name: jetstack
+jetstack_helm_repo_name: jetstack
 cert_manager_url: https://github.com/cert-manager/cert-manager/releases/download/v1.19.1/cert-manager.crds.yaml
 jetstack_helm_repo_url: "https://charts.jetstack.io"
 
